[package]
name = "windows-update-manager"
version = "0.1.4"
edition = "2024"
authors = ["Sovereign"]

[dependencies]
colored = "3.0.0"
crossterm = "0.29.0"
tui = "0.19.0"
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_System_Console", "Win32_System_Threading", "Win32_Security"] }
winreg = "0.55.0"
winapi = { version = "0.3.8", features = ["handleapi", "processthreadsapi", "winnt", "securitybaseapi"]}
webbrowser = "1.0.5"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
